force-app/main/default/objects/Manufacturing_Plant__c/Manufacturing_Plant__c.object-meta.xml
<CustomObject>
    <label>Manufacturing Plant</label>
    <nameField>
        <label>Manufacturing Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing Plants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>