force-app/main/default/objects/Manufacturing_Plant__c/fields/Imerys_Product__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imerys Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Manufacturing Plants</relationshipLabel>
    <relationshipName>Manufacturing_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>