force-app/main/default/objects/Manufacturing_Plant__c/fields/Imerys_Site__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Site__c</fullName>
    <label>Imerys Site</label>
    <referenceTo>Imerys_Site__c</referenceTo>
    <relationshipLabel>Manufacturing Plants</relationshipLabel>
    <relationshipName>Manufacturing_Plants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>