force-app/main/default/objects/Manufacturing_Plant__c/fields/Manufacturing_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Plant_Name__c</fullName>
    <label>Manufacturing Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>