force-app/main/default/objects/Manufacturing_Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Imerys_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>